Version 1.8.9
- BUG: Issue #661: memory leak committing multiple
       working copies. (Stefan)
- BUG: Issue #662: drawing bug in progress dialog. (Stefan)

Version 1.8.8
- BUG: Issue #640: Restore after commit - Unchecked
       files are not restored upon commit. (Stefan)
- BUG: Issue #641: svn:global-ignores does not work
       with multiple targets selected. (Stefan)
- BUG: Issue #642: Log message not saved in history
       on cancel. (Stefan)
- BUG: Issue #644: Bug in rename when "similar file name"
       renames are involved and file names
       include multiple dots. (Stefan)
- BUG: Issue #653: Unified diff from log no longer
       includes property changes. (Stefan)

Version 1.8.7
- BUG: Issue #633: Relocate dialog does
       not remember urls. (Stefan)
- BUG: Issue #634: Repo browser does not
       show nested externals. (Stefan)
- BUG: Issue #635: externals property not correctly
       converted to a relative url. (Stefan)
- BUG: Issue #636: externals property dialog does not
       handle multiple selections. (Stefan)
- BUG: Issue #637: TortoiseMerge fails to detect
       utf16 files if BOM is missing. (Stefan)
- BUG: Issue #638: log dialog filter not fully
       reapplied after refresh. (Stefan)
- BUG: Issue #639: File externals not
       committed. (Stefan)

Version 1.8.6
- BUG: Issue #617: Checkbox size too big on Aero
       area in high dpi mode. (Stefan)
- BUG: Issue #619: "show log" from merge dialog fetches
       all revisions if no revision range is specified. (Stefan)
- BUG: Issue #621: Export Log Cache did not
       export to the expected path. (Sup Yut Sum)
- BUG: Issue #620: merge message truncates url. (Stefan)
- BUG: Issue #622: generated merge message contains
       too many entries. (Stefan)
- CHG: Issue #624: in page error writing log file. (Stefan)
- BUG: Issue #626: Applying patch can find
       wrong "better" path. (Stefan)
- BUG: Issue #628: Invalid urls in repobrowser
       for SVNParentPath. (Stefan)